--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald:400,600|Sacramento|Source+Sans+Pro:300&subset=latin-ext');
 
 /* Variables */
-
+// colors
 $color-light: #fff;
 $color-dark: #444;
-
-$font-logo: 'Sacramento', cursive;
+$color-bg: #82ccdd;
+//fonts
+$font-logo: "Onest", sans-serif;
 $font-header: 'Oswald', sans-serif;
 $font-text: 'Source Sans Pro', sans-serif;
 
@@ -16,24 +17,25 @@ $font-text: 'Source Sans Pro', sans-serif;
 }
 
 body {
-  background: $color-light;
+  background: $color-bg;
   font-family: $font-text;
   color: $color-dark;
   font-weight: 300;
   font-size: 16px;
   line-height: 1.7;
+  caret-color: transparent;
 }
 
 .container {
-  max-width: 1140px;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .section-title {
-  font-size: 22px;
+  font-size: 25px;
   text-transform: uppercase;
   font-family: $font-header;
   font-weight: 600;
+  text-align: center;
   span {
     text-transform: none;
     font-weight: 400;
@@ -54,6 +56,8 @@ body {
 
 .posts {
   flex: 2 0 0;
+  position: relative;
+  padding: 20px;
 }
 
 .sidebar, .posts {
@@ -61,17 +65,46 @@ body {
   margin-right: 10px;
   padding: 40px;
   border: 1px solid $color-dark;
-  border-radius: 5px;
+  border-radius: 20px;
+  a {
+    text-decoration: none;
+    font-size: 25px;
+    color: #636e72;
+  }
 }
 
-/* Logo */
+/* Header */
+
+.header {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 .logo {
+ 
+  padding: 20px 40px;
+  border-radius: 50%;
+  box-shadow: 1px 3px 5px $color-dark;
+ 
+}
+
+.logo-img {
+  width: 100px;
+}
+
+.title {
+  color: white;
   font-family: $font-logo;
-  font-weight: 400;
-  font-size: 104px;
+  text-shadow: 2px 2px 3px $color-dark;
+  font-weight: 300;
+  font-size: 80px;
   line-height: 1;
   text-align: center;
+  padding: 0;
+  margin: 30px 0px 50px 0px;
 }
 
 /* Lists */
@@ -83,6 +116,10 @@ body {
   .active {
     font-weight: bold;
   }
+}
+
+a.active::before {
+  content: url("/images/carrot-solid\ \(1\).svg");
 }
 
 .list-horizontal {
@@ -102,9 +139,15 @@ body {
 /* Post */
 
 .post {
-  display: none;
+  //display: none;
+  opacity: 0;
+  position: absolute;
+  width: inherit;
+  padding-right: 30px;
   &.active {
-    display: block;
+    //display: block;
+    transition: opacity 0.5s ;
+    opacity: 1;
   }
 }
 
@@ -117,4 +160,25 @@ body {
   p {
     margin: 0 10px 0 0;
   }
+}
+
+.post0 {
+  display: none;
+  .image0 {
+    height: 500px;
+    
+    img {
+      //width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  &.active {
+    display: block;
+  }
+} 
+
+i.pointer {
+  display: inline-block;
+  margin-right: 8px;
 }
