--- a/sass/style.scss
+++ b/sass/style.scss
@@ -129,6 +129,14 @@ body {
   
 }
 
+ul.categories {
+  padding: 0;;
+}
+
+a.tag {
+  margin-right: 8px;
+}
+
 .posts-list .active {
   font-weight: bold;
 }
@@ -189,7 +197,8 @@ body {
 // tags classes
 a.tag-size-1 {
   font-size: 90%;
-  color: red;
+  color: #8395a7;
+  font-weight: bold;
   .active {
     font-weight: normal;
   }
@@ -198,7 +207,8 @@ a.tag-size-1 {
 
 a.tag-size-2 {
   font-size: 120%;
-  color: blue;
+  color: #686de0;
+  font-weight: bold;
   .active {
     font-weight: normal;
   }
@@ -206,7 +216,8 @@ a.tag-size-2 {
 
 a.tag-size-3 {
   font-size: 150%;
-  color: rgb(49, 83, 9);
+  color: #6ab04c;
+  font-weight: bold;
   .active {
     font-weight: normal;
   }
@@ -214,7 +225,8 @@ a.tag-size-3 {
 
 a.tag-size-4 {
   font-size: 155%;
-  color: rgb(73, 6, 87);
+  color: #6ab04c;
+  font-weight: bold;
   .active {
     font-weight: normal;
   }
@@ -222,7 +234,7 @@ a.tag-size-4 {
 
 a.tag-size-5 {
   font-size: 160%;
-  color: rgb(104, 57, 3);
+  color: #ff9f43;
   font-weight: bold;
   .active {
     font-weight: normal;
